--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body{
 	font-family: 'Lato', Helvetica, Arial, sans-serif;
 	color: #fff;
 	font-size: 1.5em;
+  background: url('../img/background05.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 h1,h2,h3,h4,h5,h6{
 	margin: 0;
