--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a{
     padding: 0 40px 40px;
 }
 #logo{
-	background: url("/img/skate_wheel.png") no-repeat scroll 0 0 transparent;
+	background: url("../img/skate_wheel.png") no-repeat scroll 0 0 transparent;
     display: block;
     height: 100px;
     left: 50%;
